--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,7 @@
   HUGO_VERSION = "0.71.1"
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.71.1"
+[context.deploy-preview]
+  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
+[context.branch-deploy]
+  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
